# Solid-State-Amplifer-Class-AB-Engineering-Bench-Test-Analysis-Setup

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG 2.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_GUI_MODULARIZATION.md  Dockerfile  EXODRIVER.md  LICENSE  Makefile  Makefile.md  README.md  RELEASE_NOTES_DRAFT_v0.3.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.3.6.md  RELEASE_NOTES_v0.3.8.md  REQUIREMENTS.TXT  ROADMAP.md  ROADMAP_ISSUES_0_3_1.md  ROADMAP_ISSUES_0_3_3.md  SIGNING_TEST_FILE  VERIFY_SIGNING.md  index.html  mypy.ini  private-key-backup-57449ED42246F62D.asc  private-key-backup.asc  pull_request_26_title.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  sitecustomize.py  sitemap.xml  (+2 more)
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template 2.md
.github/workflows/: ci.yml  codex-autofix.yml  dependency-submission.yml  docs.yml  pre-commit.yml  project-sync.yml  publish.yml  release.yml  selftest.yml  testpypi.yml
PySide6/: QtWidgets.py  __init__.py
amp_benchkit/: __init__.py  automation.py  cli.py  config.py  deps.py  diagnostics.py  dsp.py  dsp_ext.py  fy.py  logging.py  sweeps.py  tek.py  u3config.py  u3util.py
amp_benchkit/gui/: __init__.py  _qt.py  automation_tab.py  daq_tab.py  diag_tab.py  gen_tab.py  scope_tab.py  thd_tab.py
configuration/: index.html
configuration 2/: index.html
development/: index.html
development 2/: index.html
docs/: amp-benchkit_test_recipes.md  configuration.md  hardware-setup 2.md  testing 2.md  testing.md
examples/: quick_sweep.py
exodriver/: 90-labjack.rules  INSTALL.Linux  INSTALL.MacOSX  README  install  install.sh
exodriver/examples/Modbus/: Makefile  modbus.c  modbus.h  readModbusExample.c  testModbusFunctions.c  writeModbusExample.c
exodriver/examples/U12/: Makefile  u12AISample.c
exodriver/examples/U3/: Makefile  u3.c  u3.h  u3BasicConfigU3.c  u3EFunctions.c  u3Feedback.c  u3LJTDAC.c  u3Stream.c  u3allio.c
exodriver/examples/U6/: Makefile  u6BasicConfigU6.c  u6ConfigU6.c  u6EFunctions.c  u6Feedback.c  u6LJTDAC.c  u6Stream.c  u6allio.c
exodriver/examples/UE9/: Makefile  ue9.c  ue9.h  ue9BasicCommConfig.c  ue9ControlConfig.c  ue9EFunctions.c  ue9EthernetExample.c  ue9Feedback.c  ue9LJTDAC.c  ue9SingleIO.c  ue9Stream.c  ue9TimerCounter.c  ue9allio.c
exodriver/liblabjackusb/: Makefile  add_ldconfig_path.sh
getting-started/: index.html
getting-started 2/: index.html
gui-overview/: index.html
gui-overview 2/: index.html
hardware-setup/: index.html
hardware-setup 2/: index.html
index 2/: index.html
patches/: exodriver-install-alpine.patch
pulls/28/: body
results/: sweep_scope.csv
scripts/: capture_waveform.py  check_labjack_usb.py  example_fft_capture.py  fft_quality_metrics.py  gpg_signing_helper.sh  inspect_fft_bin.py  install_exodriver_alpine.sh  live_fft_sweep.py  postman_list_collections.sh  release.sh  reset-main-clean.sh  stitch_fft_bandpasses.py  thd_math_sweep.py  thdn_vs_frequency.py  thdn_vs_power.py
search/: search_index.json
testing/: index.html
testing 2/: index.html
tests/: conftest.py  test_automation.py  test_cli_freq_thd_json.py  test_cli_no_args.py  test_cli_spectrum.py  test_cli_sweep.py  test_cli_thd_mode.py  test_codex_autofix_trigger.py  test_codex_smoke.py  test_config.py  test_config_persistence.py  test_core.py  test_daq_optional_import.py  test_diagnostics.py  test_dsp.py  test_entrypoint_cli.py  test_gui_all_tabs.py  test_gui_builders.py  test_gui_thd_tab.py  test_hil_optional.py  test_sweeps.py  test_tek.py  test_thd_dispatcher.py  test_u3_env_gating.py  test_u3config.py  test_version.py
unified-gui-layout/: README.md  REQUIREMENTS_TXT
